tentative header logo fix
Gusde report that it is not showing in safari dip and iPhone, lets try
now, after some cleaner css rule were applied...

--- a/_sass/_7header.scss
+++ b/_sass/_7header.scss
@@ -145,10 +145,13 @@
     }
   }
 
-  .logotext {
-    //svg
-    max-height: 55px;
-    max-width: 260px;
+  .logotext_wrap {
+    height: 55px;
+    svg {
+      margin: 0;
+      padding: 0;
+      width: 250px;
+    }
   }
 
   .logo {
